2007-07-19  Nick Clifton  <nickc@redhat.com>

	PR gas/4804
	* gas/elf/elf.exp (target_machine): Treat the arm-linux-gnu target
	in the same way as the arm-eabi target.
	* gas/arm/mapshort-eabi.d: Use this file for the arm-linux-gnu
	target.
	* gas/arm/mapshort-elf.d: Do not use this file for the
	arm-linux-gnu target.

2007-07-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/simd.s: Add tests for punpcklbw, punpckldq,
	punpcklwd and punpcklqdq.
	* gas/i386/x86-64-simd.s: Likewise.

	* gas/i386/simd-intel.d: Updated.
	* gas/i386/simd.d: Likewise.
	* gas/i386/x86-64-simd-intel.d: Likewise.
	* gas/i386/x86-64-simd.d: Likewise.

2007-07-14  Nick Clifton  <nickc@redhat.com>

	* gas/arm/arm.s: Add tests for re-aliasing a previously removed
	alias.
	* gas/arm/arm.l: Add new expected warning message.

2007-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/ssemmx2.d: Ignore padding.

2007-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/rex.s: Avoid the last rex prefix becoming the
	rex prefix for the padding.

2007-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run x86-64-nops-1 for x86_64-*-mingw*.

2007-07-04  Nick Clifton  <nickc@redhat.com>

	* gas/mep/relocs.d: Fix expected disassembly to work on 64-bit
	hosts.

2007-07-03  M R Swami Reddy  <MR.Swami.Reddy@nsc.com>

	* gas/elf/elf.exp: Expect redef test to fail for CR16.
	* gas/all/gas.exp: Expect forward and do_930509a tests to fail for
	the CR16.
	* gas/cr16/cinv_test.d: Remove whitespace dependencies.

2007-07-03  Nick Clifton  <nickc@redhat.com>

	* lib/gas-defs.exp: Update copyright notice to refer to GPLv3.
	* gas/all/itbl-test.c, gas/all/test-example.c, gas/all/test-gen.c,
	gas/arm/maverick.c, gas/cris/cris.exp, gas/hppa/basic/basic.exp,
	gas/hppa/parse/parse.exp, gas/hppa/reloc/reloc.exp,
	gas/hppa/unsorted/unsorted.exp, gas/mmix/mmix-err.exp,
	gas/mmix/mmix-list.exp, gas/mmix/mmix.exp, gas/mn10200/basic.exp,
	gas/mn10300/am33-2.c, gas/mn10300/basic.exp, gas/pdp11/opcode.s,