@@ -1,3 +1,8 @@
+2007-07-23  Richard Sandiford  <richard@codesourcery.com>
+
+	* lib/gas-defs.exp (run_list_test): Make the options optional.
+	* gas/cr16/cr16.exp (run_list_test): Delete.
+
 2007-07-19  Nick Clifton  <nickc@redhat.com>
 
 	PR gas/4804
